--- a/Draw/Controller/Shop/ColorShopCell.xib
+++ b/Draw/Controller/Shop/ColorShopCell.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUITableViewCell</string>
@@ -109,7 +109,7 @@
 							<object class="IBUIImageView" id="320889418">
 								<reference key="NSNextResponder" ref="792597380"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{12, 0}, {32, 34}}</string>
+								<string key="NSFrame">{{12, 41}, {32, 34}}</string>
 								<reference key="NSSuperview" ref="792597380"/>
 								<reference key="NSNextKeyView" ref="782027522"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -316,6 +316,6 @@
 			<string key="coin@2x.png">{64, 68}</string>
 			<string key="wood_pallets@2x.png">{608, 111}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
