--- a/Draw/Controller/Shop/ColorShopCell~iPad.xib
+++ b/Draw/Controller/Shop/ColorShopCell~iPad.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUITableViewCell</string>
@@ -108,7 +108,6 @@
 								<string key="NSFrame">{{593, 62}, {86, 88}}</string>
 								<reference key="NSSuperview" ref="792597380"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<reference key="IBUIBackgroundColor" ref="480682483"/>
 								<int key="IBUITag">14</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -116,7 +115,7 @@
 							<object class="IBUIImageView" id="320889418">
 								<reference key="NSNextResponder" ref="792597380"/>
 								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{29, 2}, {64, 68}}</string>
+								<string key="NSFrame">{{29, 82}, {64, 68}}</string>
 								<reference key="NSSuperview" ref="792597380"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="782027522"/>
@@ -368,6 +367,6 @@
 			<string key="coin@2x.png">{64, 68}</string>
 			<string key="wood_pallets@2x.png">{608, 111}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
