--- a/Draw/View/ShopView/ColorShopView.xib
+++ b/Draw/View/ShopView/ColorShopView.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUITableView</string>
@@ -163,6 +163,7 @@
 						<int key="NSvFlags">293</int>
 						<string key="NSFrame">{{8, 100}, {304, 350}}</string>
 						<reference key="NSSuperview" ref="213797105"/>
+						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -183,14 +184,14 @@
 					<object class="IBUIImageView" id="427966318">
 						<reference key="NSNextResponder" ref="213797105"/>
 						<int key="NSvFlags">293</int>
-						<string key="NSFrame">{{31, 57}, {32, 34}}</string>
+						<string key="NSFrame">{{29, 57}, {34, 34}}</string>
 						<reference key="NSSuperview" ref="213797105"/>
 						<reference key="NSNextKeyView" ref="659072933"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">coin@2x.png</string>
+							<string key="NSResourceName">reward_coin@2x.png</string>
 						</object>
 					</object>
 				</array>
@@ -362,10 +363,10 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back@2x.png">{74, 74}</string>
-			<string key="coin@2x.png">{64, 68}</string>
+			<string key="reward_coin@2x.png">{84, 84}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 			<string key="wood_bg@2x.png">{640, 960}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
